--- a/dictionary/extract_vocabulary.ipynb
+++ b/dictionary/extract_vocabulary.ipynb
@@ -132,6 +132,83 @@
     "    for w in sorted(words):\n",
     "        f.write(w + \"\\n\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 日本語版ウィクショナリー"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "002563faad754821b123ee63691bc604",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/91.4M [00:00<?, ?iB/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished downloading\n",
+      "Finished decompressing\n",
+      "Finished extracting\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tempfile\n",
+    "import wiktionary\n",
+    "import bz2\n",
+    "import requests\n",
+    "from tqdm.notebook import tqdm\n",
+    "from pathlib import Path\n",
+    "\n",
+    "LATEST_WIKITIONARY_DUMP_URL = \"https://dumps.wikimedia.org/jawiktionary/latest/jawiktionary-latest-pages-articles-multistream.xml.bz2\"\n",
+    "\n",
+    "OUTPUT_DIR = Path(\"output\")\n",
+    "output_path = OUTPUT_DIR / \"ainu_entries.json\"\n",
+    "\n",
+    "with tempfile.TemporaryDirectory() as temp_dir:\n",
+    "    downloaded_path = Path(temp_dir) / \"jawiktionary-latest-pages-articles-multistream.xml.bz2\"\n",
+    "\n",
+    "    decompressed_path = Path(temp_dir) / \"jawiktionary-latest-pages-articles-multistream.xml\"\n",
+    "\n",
+    "    # Only download and process if dump is newer or output doesn't exist\n",
+    "    with requests.get(LATEST_WIKITIONARY_DUMP_URL, stream=True) as r:\n",
+    "        r.raise_for_status()\n",
+    "        total_size = int(r.headers.get('content-length', 0))\n",
+    "        progress_bar = tqdm(total=total_size, unit='iB', unit_scale=True, desc=\"Downloading\")\n",
+    "        with open(downloaded_path, \"wb\") as f:\n",
+    "            for chunk in r.iter_content(chunk_size=8192):\n",
+    "                f.write(chunk)\n",
+    "                progress_bar.update(len(chunk))\n",
+    "        progress_bar.close()\n",
+    "\n",
+    "    print(\"Finished downloading\")\n",
+    "\n",
+    "    with open(decompressed_path, \"wb\") as f:\n",
+    "        f.write(bz2.open(downloaded_path, \"rb\").read())\n",
+    "\n",
+    "    print(\"Finished decompressing\")\n",
+    "\n",
+    "    wiktionary.extract_ainu_entries(str(decompressed_path), str(output_path))\n",
+    "\n",
+    "    print(\"Finished extracting\")\n"
+   ]
   }
  ],
  "metadata": {
