feat: add part of speech extraction from wiktionary

--- a/dictionary/extract_vocabulary.ipynb
+++ b/dictionary/extract_vocabulary.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 各辞書の単語一覧を取得"
+    "# Extract vocabulary from each dictionary"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 語彙集"
+    "## Itak-uoeroskip"
    ]
   },
   {
@@ -137,18 +137,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 日本語版ウィクショナリー"
+    "## Japanese Wiktionary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Extract Ainu entries from Japanese Wiktionary dump data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "002563faad754821b123ee63691bc604",
+       "model_id": "119e6ff5950b442986e8239cd06fbf48",
        "version_major": 2,
        "version_minor": 0
       },
@@ -180,7 +187,7 @@
     "LATEST_WIKITIONARY_DUMP_URL = \"https://dumps.wikimedia.org/jawiktionary/latest/jawiktionary-latest-pages-articles-multistream.xml.bz2\"\n",
     "\n",
     "OUTPUT_DIR = Path(\"output\")\n",
-    "output_path = OUTPUT_DIR / \"ainu_entries.json\"\n",
+    "wiktionary_ainu_entries_json_path = OUTPUT_DIR / \"wiktionary_ainu_entries.json\"\n",
     "\n",
     "with tempfile.TemporaryDirectory() as temp_dir:\n",
     "    downloaded_path = Path(temp_dir) / \"jawiktionary-latest-pages-articles-multistream.xml.bz2\"\n",
@@ -205,9 +212,161 @@
     "\n",
     "    print(\"Finished decompressing\")\n",
     "\n",
-    "    wiktionary.extract_ainu_entries(str(decompressed_path), str(output_path))\n",
+    "    wiktionary.extract_ainu_entries(str(decompressed_path), str(wiktionary_ainu_entries_json_path))\n",
     "\n",
     "    print(\"Finished extracting\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Extract Part of Speech information from extracted Ainu entries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "197a085225774b769c36b5b2be08f67c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/2311 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ma\n",
+      "hima\n",
+      "tagis\n",
+      "asu\n",
+      "num\n",
+      "pitu\n",
+      "siva\n",
+      "chwast\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "adnom\n",
+      "adv\n",
+      "auxverb\n",
+      "colloc\n",
+      "conj\n",
+      "determiner\n",
+      "interj\n",
+      "noun\n",
+      "num\n",
+      "parti\n",
+      "postpadv\n",
+      "prefix\n",
+      "pron\n",
+      "pronoun\n",
+      "rel\n",
+      "root\n",
+      "suffix\n",
+      "verb\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "import regex as re\n",
+    "with open(wiktionary_ainu_entries_json_path, \"r\") as f:\n",
+    "    wiktionary_ainu_entries = json.load(f)\n",
+    "\n",
+    "\n",
+    "valid_entries = {}\n",
+    "for entry in tqdm(wiktionary_ainu_entries):\n",
+    "    if re.search(r\"^[a-z]+$\", entry[\"title\"]):\n",
+    "        valid_entries[entry[\"title\"]] = entry[\"text\"]\n",
+    "\n",
+    "MAP = {\n",
+    "    \"後置副詞\": \"postpadv\",\n",
+    "    \"助詞\": \"parti\",\n",
+    "    \"助動詞\": \"auxverb\",\n",
+    "    \"位置名詞\": \"noun\",\n",
+    "    \"動詞\": \"verb\",\n",
+    "    \"副詞\": \"adv\",\n",
+    "    \"疑問{{pronoun\": \"pronoun\",\n",
+    "    \"関係詞\": \"rel\",\n",
+    "    \"代名詞\": \"pron\",\n",
+    "    \"接尾辞\": \"suffix\",\n",
+    "    \"名詞\": \"noun\",\n",
+    "    \"連体詞\": \"adnom\",\n",
+    "    \"間投詞\": \"interj\",\n",
+    "    \"数詞\": \"num\",\n",
+    "    \"adverb\": \"adv\",\n",
+    "    \"interjection\": \"interj\",\n",
+    "    \"adjc\": \"verb\",\n",
+    "    \"adjective\": \"verb\",\n",
+    "    \"形容詞\": \"verb\",\n",
+    "    \"conjunction\": \"conj\",\n",
+    "    \"adnominal\": \"adnom\",\n",
+    "    \"numeral\": \"num\",\n",
+    "    \"pronoun\": \"pron\",\n",
+    "    \"pref\": \"prefix\",\n",
+    "    # non-pos\n",
+    "    \"雨\": None,\n",
+    "    \"鳥\": None,\n",
+    "    \"魚\": None,\n",
+    "    \"色\": None,\n",
+    "    \"動物\": None,\n",
+    "    \"擬音語\": None,\n",
+    "    \"オノマトペ\": None,\n",
+    "    \"果実\": None,\n",
+    "    \"植物\": None,\n",
+    "    \"食品\": None,\n",
+    "    \"家族\": None,\n",
+    "    \"神事\": None,\n",
+    "}\n",
+    "\n",
+    "result = {}\n",
+    "for title, text in valid_entries.items():\n",
+    "    found = re.findall(r\"\\{\\{head\\|ain\\|(?:head=.*?\\|)?([^\\|\\}]+)[^\\}]*\\}\\}\", text)\n",
+    "\n",
+    "    if \"{{ain-verb\" in text or \"項動詞\" in text:\n",
+    "        found.append(\"verb\")\n",
+    "\n",
+    "    if \"===成句===\" in text:\n",
+    "        found.append(\"colloc\")\n",
+    "\n",
+    "    found += re.findall(\n",
+    "        r\"\\[\\[(?:Category|カテゴリ):(?:\\{\\{ain\\}\\}|アイヌ語)[_ ]\\{?\\{?([^\\|\\}\\]]+)\\}?\\}?\", text\n",
+    "    )\n",
+    "    filtered = set(\n",
+    "        MAP[f] if f in MAP else f for f in found if f not in MAP or MAP[f]\n",
+    "    )\n",
+    "    result[title] = filtered\n",
+    "\n",
+    "result[\"tuki\"] = {\"noun\"}\n",
+    "\n",
+    "for title, pos in result.items():\n",
+    "    if not pos:\n",
+    "        print(title)\n",
+    "    if any(not re.match(r\"^\\p{sc=Latn}+$\", p) for p in pos):\n",
+    "        print(title, pos)\n",
+    "\n",
+    "with open(OUTPUT_DIR / \"wiktionary_ainu_part_of_speech.json\", \"w\", encoding=\"utf-8\") as f:\n",
+    "    json.dump(\n",
+    "        {k: list(v) for k, v in result.items()}, f, ensure_ascii=False, indent=4\n",
+    "    )\n",
+    "\n",
+    "print(\"-\" * 100)\n",
+    "all_pos = set()\n",
+    "for v in result.values():\n",
+    "    all_pos.update(v)\n",
+    "\n",
+    "for pos in sorted(all_pos):\n",
+    "    print(pos)"
    ]
   }
  ],
