feat: add glossed morpheme extraction from wiktionary

--- a/dictionary/extract_vocabulary.ipynb
+++ b/dictionary/extract_vocabulary.ipynb
@@ -368,6 +368,78 @@
     "for pos in sorted(all_pos):\n",
     "    print(pos)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Extract Etymology and Word Compositions from extracted Ainu entries\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1751059e9e7f40079a7d7d4f737eed60",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/2311 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import json\n",
+    "import regex as re\n",
+    "\n",
+    "with open(wiktionary_ainu_entries_json_path, \"r\") as f:\n",
+    "    wiktionary_ainu_entries = json.load(f)\n",
+    "\n",
+    "from collections import defaultdict\n",
+    "# map from morpheme to its etymology\n",
+    "dictionary: dict[str, set[str]] = defaultdict(set)\n",
+    "\n",
+    "for entry in tqdm(iterable=wiktionary_ainu_entries):\n",
+    "    if re.search(r\"\\{\\{affix\\|ain\\|.*?\\}\\}\", entry[\"text\"]):\n",
+    "        for affix in re.finditer(r\"\\{\\{affix\\|ain\\|(.*)\\}\\}[。<]?\", entry[\"text\"]):\n",
+    "            arguments = affix.group(1).replace(\"{{=}}\", \"=\").split(\"|\")\n",
+    "            # print(arguments)\n",
+    "\n",
+    "            positional_arguments = []\n",
+    "            keyword_arguments = {}\n",
+    "\n",
+    "            for argument in arguments:\n",
+    "                if \"=\" in argument:\n",
+    "                    key, value = argument.split(\"=\")\n",
+    "                    keyword_arguments[key] = value\n",
+    "                else:\n",
+    "                    positional_arguments.append(argument)\n",
+    "\n",
+    "            # print(positional_arguments)\n",
+    "            # print(keyword_arguments)\n",
+    "\n",
+    "            # TODO: handle {{m|ain|...}} + {{m|ain|...}}\n",
+    "\n",
+    "            for i, argument in enumerate(positional_arguments):\n",
+    "                if f\"t{i+1}\" in keyword_arguments and keyword_arguments[f\"t{i+1}\"] != \"\":\n",
+    "                    gloss = keyword_arguments[f\"t{i+1}\"].replace(\"～を\", \"\").split(\"}}\")[0]\n",
+    "                    dictionary[argument].add(gloss)\n",
+    "\n",
+    "with open(OUTPUT_DIR / \"wiktionary_ainu_glossed_morphemes.json\", \"w\", encoding=\"utf-8\") as f:\n",
+    "    json.dump(\n",
+    "        {k: list(v) for k, v in dictionary.items()}, f, ensure_ascii=False, indent=4\n",
+    "    )\n",
+    "\n",
+    "    # print(entry[\"text\"])"
+   ]
   }
  ],
  "metadata": {
