feat: add pos extraction for affixes

--- a/dictionary/extract_vocabulary.ipynb
+++ b/dictionary/extract_vocabulary.ipynb
@@ -141,6 +141,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "from tqdm.notebook import tqdm\n",
+    "\n",
+    "LATEST_WIKITIONARY_DUMP_URL = \"https://dumps.wikimedia.org/jawiktionary/latest/jawiktionary-latest-pages-articles-multistream.xml.bz2\"\n",
+    "\n",
+    "OUTPUT_DIR = Path(\"output\")\n",
+    "wiktionary_ainu_entries_json_path = OUTPUT_DIR / \"wiktionary_ainu_entries.json\""
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -181,13 +196,8 @@
     "import wiktionary\n",
     "import bz2\n",
     "import requests\n",
-    "from tqdm.notebook import tqdm\n",
-    "from pathlib import Path\n",
     "\n",
-    "LATEST_WIKITIONARY_DUMP_URL = \"https://dumps.wikimedia.org/jawiktionary/latest/jawiktionary-latest-pages-articles-multistream.xml.bz2\"\n",
     "\n",
-    "OUTPUT_DIR = Path(\"output\")\n",
-    "wiktionary_ainu_entries_json_path = OUTPUT_DIR / \"wiktionary_ainu_entries.json\"\n",
     "\n",
     "with tempfile.TemporaryDirectory() as temp_dir:\n",
     "    downloaded_path = Path(temp_dir) / \"jawiktionary-latest-pages-articles-multistream.xml.bz2\"\n",
@@ -226,13 +236,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "197a085225774b769c36b5b2be08f67c",
+       "model_id": "ecdee47bbc2a448a9830ed41fa98e86f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -248,6 +258,8 @@
      "output_type": "stream",
      "text": [
       "ma\n",
+      "corpok-ta\n",
+      "corpoki-ta\n",
       "hima\n",
       "tagis\n",
       "asu\n",
@@ -280,13 +292,14 @@
    "source": [
     "import json\n",
     "import regex as re\n",
+    "\n",
     "with open(wiktionary_ainu_entries_json_path, \"r\") as f:\n",
     "    wiktionary_ainu_entries = json.load(f)\n",
     "\n",
     "\n",
     "valid_entries = {}\n",
     "for entry in tqdm(wiktionary_ainu_entries):\n",
-    "    if re.search(r\"^[a-z]+$\", entry[\"title\"]):\n",
+    "    if re.search(r\"^[a-z=\\-]+$\", entry[\"title\"]):\n",
     "        valid_entries[entry[\"title\"]] = entry[\"text\"]\n",
     "\n",
     "MAP = {\n",
@@ -314,6 +327,7 @@
     "    \"numeral\": \"num\",\n",
     "    \"pronoun\": \"pron\",\n",
     "    \"pref\": \"prefix\",\n",
+    "    \"人称接辞\": None,\n",
     "    # non-pos\n",
     "    \"雨\": None,\n",
     "    \"鳥\": None,\n",
@@ -340,11 +354,16 @@
     "        found.append(\"colloc\")\n",
     "\n",
     "    found += re.findall(\n",
-    "        r\"\\[\\[(?:Category|カテゴリ):(?:\\{\\{ain\\}\\}|アイヌ語)[_ ]\\{?\\{?([^\\|\\}\\]]+)\\}?\\}?\", text\n",
+    "        r\"\\[\\[(?:Category|カテゴリ):(?:\\{\\{ain\\}\\}|アイヌ語)[_ ]\\{?\\{?([^\\|\\}\\]]+)\\}?\\}?\",\n",
+    "        text,\n",
     "    )\n",
-    "    filtered = set(\n",
-    "        MAP[f] if f in MAP else f for f in found if f not in MAP or MAP[f]\n",
-    "    )\n",
+    "\n",
+    "    if title.startswith(\"-\") or title.startswith(\"=\"):\n",
+    "        found.append(\"suffix\")\n",
+    "    if title.endswith(\"-\") or title.endswith(\"=\"):\n",
+    "        found.append(\"prefix\")\n",
+    "\n",
+    "    filtered = set(MAP[f] if f in MAP else f for f in found if f not in MAP or MAP[f])\n",
     "    result[title] = filtered\n",
     "\n",
     "result[\"tuki\"] = {\"noun\"}\n",
@@ -355,10 +374,10 @@
     "    if any(not re.match(r\"^\\p{sc=Latn}+$\", p) for p in pos):\n",
     "        print(title, pos)\n",
     "\n",
-    "with open(OUTPUT_DIR / \"wiktionary_ainu_part_of_speech.json\", \"w\", encoding=\"utf-8\") as f:\n",
-    "    json.dump(\n",
-    "        {k: list(v) for k, v in result.items()}, f, ensure_ascii=False, indent=4\n",
-    "    )\n",
+    "with open(\n",
+    "    OUTPUT_DIR / \"wiktionary_ainu_part_of_speech.json\", \"w\", encoding=\"utf-8\"\n",
+    ") as f:\n",
+    "    json.dump({k: list(v) for k, v in result.items()}, f, ensure_ascii=False, indent=4)\n",
     "\n",
     "print(\"-\" * 100)\n",
     "all_pos = set()\n",
