feat: add advanced image cropping for ocr

--- a/text/convert_pdf_to_images.ipynb
+++ b/text/convert_pdf_to_images.ipynb
@@ -11,7 +11,15 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Converted KJ00004166033.pdf to pngs\n"
+     ]
+    }
+   ],
    "source": [
     "from pathlib import Path\n",
     "import pdf2image\n",
@@ -25,6 +33,58 @@
     "        path.parent.mkdir(parents=True, exist_ok=True)\n",
     "        image.save(path)\n",
     "    print(f\"Converted {pdf_file} to pngs\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 画像を裁断\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "from PIL import Image\n",
+    "\n",
+    "CROP_SRC_PATH = Path(\"crop\")\n",
+    "\n",
+    "for crop_path in CROP_SRC_PATH.glob(\"*.json\"):\n",
+    "    with open(crop_path, \"r\") as file:\n",
+    "        crop_data = json.load(file)\n",
+    "\n",
+    "    image_dir = Path(\"output\") / crop_path.stem\n",
+    "\n",
+    "    cropped_image_dir = Path(\"output\") / crop_path.stem / \"cropped\"\n",
+    "    for file in cropped_image_dir.glob(\"**/*\"):\n",
+    "        file.unlink()\n",
+    "    cropped_image_dir.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "    pages = sorted(image_dir.glob(\"*.png\"))\n",
+    "\n",
+    "    for page in pages:\n",
+    "        image = Image.open(page)\n",
+    "        image_width, image_height = image.size\n",
+    "        page_id = int(page.stem)\n",
+    "        for i, crop in enumerate(crop_data[\"crops\"]):\n",
+    "            page_from = int(crop.get(\"page_from\", 0))\n",
+    "            page_to = int(crop.get(\"page_to\", len(pages)))\n",
+    "\n",
+    "            if page_from > page_id:\n",
+    "                break\n",
+    "\n",
+    "            if page_to < page_id:\n",
+    "                continue\n",
+    "\n",
+    "            crop_dir = cropped_image_dir / f\"{i}\"\n",
+    "            crop_dir.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "            cropped_image = image.crop((crop[\"x\"] * image_width, crop[\"y\"] * image_height, (crop[\"x\"] + crop[\"width\"]) * image_width, (crop[\"y\"] + crop[\"height\"]) * image_height))\n",
+    "            cropped_image.save(crop_dir / f\"{page_id}.png\")\n"
    ]
   }
  ],
