feat: add word (type) frequency list

--- a/corpus/basic_statistics.ipynb
+++ b/corpus/basic_statistics.ipynb
@@ -226,6 +226,29 @@
     "    print(f\"Types: {len(set(flattened_words))}\")\n",
     "    print()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('a=', 54749), ('ne', 46281), ('wa', 42293), ('=an', 32295), ('kor', 27856), ('an', 26602), ('ka', 21685), ('ta', 19639), ('hine', 13924), ('e=', 13146)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "\n",
+    "word_counts = Counter(combined_words)\n",
+    "\n",
+    "with open(\"output/ainu_words_all.tsv\", \"w\") as f:\n",
+    "    for word, count in word_counts.most_common():\n",
+    "        f.write(f\"{word}\\t{count}\\n\")"
+   ]
   }
  ],
  "metadata": {
