refactor: extract RawSentence type

--- a/corpus/search_by_pos.ipynb
+++ b/corpus/search_by_pos.ipynb
@@ -8,12 +8,7 @@
    "source": [
     "import pickle\n",
     "from typing import TypedDict\n",
-    "\n",
-    "class RawSentence(TypedDict):\n",
-    "    sentence: str\n",
-    "    words: list[str]\n",
-    "    translation: str\n",
-    "    part_of_speech: list[list[str]]\n",
+    "from utils.corpus import RawSentence\n",
     "\n",
     "with open(\"output/annotated_translated_tokenized_corpus_by_book.pkl\", \"rb\") as f:\n",
     "    translation_pair_by_book: dict[str, list[RawSentence]] = pickle.load(f)"
